# MCP-GetUrls

./: README.md  pyproject.toml
app/: fetch_parse.py  main.py  models.py  search.py  select.py
app/templates/: index.html
tests/: test_endpoints.py  test_search.py  test_select.py
